<resources>
    <string name="app_name">LabAndroidFragSensor</string>
    <string name="sensores_tv">Prueba de sensores</string>
    <string name="sensor1_tx_btn">Sensor 1</string>
    <string name="sensor2_tx_btn">Sensor 2</string>
    <string name="sensor3_tx_btn">Sensor 3</string>
    <string name="sensor4_tx_btn">Sensor 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>